# nvai-cli

./: .gitignore  Architect.md  Architecture.md  README.md  install.sh  pyproject.toml  uninstall.sh
scripts/: install-user.sh  uninstall-user.sh
src/nvai/: __init__.py  agent.py  auth_flow.py  cli.py  context.py  datetime_utils.py  doctor.py  key_prompt.py  key_store.py  models.py  nvidia_client.py  policy.py  runtime_config.py  tools.py  tui.py  ui.py
tests/: test_agent.py  test_auth_flow.py  test_cli.py  test_datetime_utils.py  test_doctor.py  test_key_prompt.py  test_key_store.py  test_nvidia_client.py  test_tools.py  test_tui.py  test_ui.py
