[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nvai-cli"
version = "0.0.3"
description = "NVIDIA AI GLM coding CLI with daily expiring API-key rotation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "cjakma"}]
dependencies = []

[project.scripts]
nvai = "nvai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
